some changes made

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous"></script>
     <!-- font awosome -->
     <script src="https://kit.fontawesome.com/61d8d73bb4.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./responlum.css">
+    <link rel="stylesheet" href="./style.css">
 
 
 </head>
