--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse sticky-top" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-auto mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
@@ -236,32 +236,23 @@
         </div>
 
     </div> -->
-    <div class="courseheighlite container" style="border:solid 1px rgb(238, 236, 236)">
-        <div class="row" id="luftimage">
-            <div class="col-sm-6">
-              <div class="card"  id="luftimage">
-                <div class="card-body"  id="luftimage">
-                    <img src="./images/luft.PNG" alt="" style="width:428px ; height:248px;">
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="card"  id="luftimage">
-                <div class="card-body">
-                  <h4 class="card-title" style="color: rgb(134, 18, 150);">DATA SCIENCE - ML - AI - BIG DATA WITH CLOUD & TABLEAU</h4>
-                  <p class="card-text"style="color:black">Python, Hadoop, Spark, Data Analytics, Linear Algebra, Statistics, Probability
-                    Concepts, Machine Learning, Deep Learning, Data Science, Artificial Intelligence, Tableau, AWS Cloud</p> <br>
-                    <i class="fa-solid fa-calendar fa-1x" id="fca"></i><b>Next Batch : May 03rd (09:30 am - 11:30
-                        am)</b><br>
-                    <i class="fa-solid fa-clock fa-1x" id="fca"></i><b>Duration:6 Months,5-6 Daysa Week,2-3Hours/day</b>
-                    <br>
-                    <i class="fa-solid fa-indian-rupee-sign fa-1x" id="fca"></i><b>Course Fees:</b> <a href=""
-                        style="color: rgb(163, 74, 223);"> VIEW MORE</a>
-                
-                </div>
-              </div>
-            </div>
-          </div>
+    <div class="row container exam">
+        <div class="col lg-6 exmimg">
+            <img src="./images/luft.PNG" alt="" class="eximg">
+        </div>
+        <div class="col lg-6 examdes">
+            <h4 style="color: rgb(134, 18, 150);">DATA SCIENCE - ML - AI - BIG DATA WITH CLOUD & TABLEAU</h4>
+            <p style="color:black">Python, Hadoop, Spark, Data Analytics, Linear Algebra, Statistics, Probability
+                Concepts, Machine Learning, Deep Learning, Data Science, Artificial Intelligence, Tableau, AWS Cloud
+            </p>
+            <i class="fa-solid fa-calendar fa-1x" id="fca"></i><b>Next Batch : May 03rd (09:30 am - 11:30
+                am)</b><br>
+            <i class="fa-solid fa-clock fa-1x" id="fca"></i><b>Duration:6 Months,5-6 Daysa Week,2-3Hours/day</b>
+            <br>
+            <i class="fa-solid fa-indian-rupee-sign fa-1x" id="fca"></i><b>Course Fees:</b> <a href=""
+                style="color: rgb(163, 74, 223);"> VIEW MORE</a>
+        
+        </div>
     </div>
 
 
